fix extra space above header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,3 +23,7 @@
 }
 .thumbnail {
 }
+
+#sidenav + div .col-md-12:first-of-type > * {
+  margin-top: 0;
+}
